--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
-featured-image: 1855Image.jpg
+featured-image: 1855Image
 # from https://www.lib.uidaho.edu/digital/barstock/items/barstock985.html
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 9em # Default is 8em
