--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -13,7 +13,7 @@ featured-image: /objects/1855Image.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 9em # Default is 8em
 # optional: change position of background image, center, top, bottom
-home-banner-image-position: # Default is center
+home-banner-image-position: top
 
 ##########
 # ITEM PAGE
